# creatur

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.project  creatur.cabal  default.nix  gray-extended.nix  notes  package.yaml  project.nix  release.nix  shell.nix  stack.yaml
nix/: nixos-20-03.json  nixos-20-03.nix
src/ALife/: Creatur.hs
src/ALife/Creatur/: AgentNamer.hs  Checklist.hs  Clock.hs  Counter.hs  Daemon.hs  Database.hs  EnergyPool.hs  Logger.hs  Namer.hs  Persistent.hs  Task.hs  Universe.hs  Util.hs
src/ALife/Creatur/Database/: CachedFileSystem.hs  CachedFileSystemInternal.hs  FileSystem.hs
src/ALife/Creatur/Genetics/: Analysis.hs  BRGCBool.hs  BRGCWord16.hs  BRGCWord8.hs  Code.hs  CodeInternal.hs  Diploid.hs  Gene.hs  Recombination.hs
src/ALife/Creatur/Genetics/Reproduction/: Asexual.hs  Sexual.hs  SimplifiedSexual.hs
src/ALife/Creatur/Logger/: SimpleLogger.hs  SimpleRotatingLogger.hs
src/ALife/Creatur/Universe/: Task.hs
test/: BenchAll.hs  Main.hs  Spec.hs  TestAll.hs
test/ALife/Creatur/: ChecklistQC.hs  CounterQC.hs  PersistentQC.hs  UniverseQC.hs  UtilQC.hs
test/ALife/Creatur/Database/: CachedFileSystemQC.hs  FileSystemQC.hs
test/ALife/Creatur/Genetics/: BRGCBoolBench.hs  BRGCBoolQC.hs  BRGCWord16QC.hs  BRGCWord8Bench.hs  BRGCWord8QC.hs  CodeQC.hs  CrossoverQC.hs  DiploidQC.hs  RecombinationQC.hs
unused/: BRGCBoolBench.hs  BRGCWord8Bench.hs  BenchAll.hs  amyMPTC.hs  amyNewtype.hs  storageComparison
