cabal-version:      2.4
synopsis:           Framework for artificial life experiments.
name:               creatur
version:            5.9.30
description:
  Please see the README on GitHub at <https://github.com/mhwombat/creatur#readme>
homepage:           https://github.com/mhwombat/creatur
bug-reports:        https://github.com/mhwombat/creatur/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2012-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur

common common-stuff
  default-language: Haskell2010

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    ALife.Creatur
    ALife.Creatur.Checklist
    ALife.Creatur.Clock
    ALife.Creatur.Counter
    ALife.Creatur.Daemon
    ALife.Creatur.Database
    ALife.Creatur.Database.CachedFileSystem
    ALife.Creatur.Database.CachedFileSystemInternal
    ALife.Creatur.Database.FileSystem
    ALife.Creatur.Genetics.Analysis
    ALife.Creatur.Genetics.BRGCBool
    ALife.Creatur.Genetics.BRGCWord16
    ALife.Creatur.Genetics.BRGCWord8
    ALife.Creatur.Genetics.Diploid
    ALife.Creatur.Genetics.Recombination
    ALife.Creatur.Genetics.Reproduction.Sexual
    ALife.Creatur.Genetics.Reproduction.SimplifiedSexual
    ALife.Creatur.Logger
    ALife.Creatur.Logger.SimpleLogger
    ALife.Creatur.Logger.SimpleRotatingLogger
    ALife.Creatur.Namer
    ALife.Creatur.Persistent
    ALife.Creatur.Task
    ALife.Creatur.Universe
    ALife.Creatur.Util
  other-modules:   Paths_creatur
  autogen-modules: Paths_creatur
  ghc-options:     -Wall -Wunused-packages
  build-depends:
    , array          ^>=0.5.2
    , base           >=4.7    && <5
    , binary         >=0.8    && <0.11
    , bytestring     >=0.10.8 && <0.12
    , cereal         ^>=0.5.7
    , cond           ^>=0.4.1
    , directory      ^>=1.3.1
    , exceptions     ^>=0.10.0
    , filepath       ^>=1.4.2
    , gray-extended  ^>=1.5.9
    , hdaemonize     ^>=0.5.5
    , hsyslog        ^>=5.0.1
    , MonadRandom    ^>=0.5.1
    , mtl            ^>=2.2.2
    , random         >=1.1    && <1.3
    , split          ^>=0.2.3
    , time           >=1.1    && <1.13
    , transformers   >=0.5.5  && <0.7
    , unix           ^>=2.7.2

test-suite creatur-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    ALife.Creatur.ChecklistQC
    ALife.Creatur.CounterQC
    ALife.Creatur.Database.CachedFileSystemQC
    ALife.Creatur.Database.FileSystemQC
    ALife.Creatur.Genetics.BRGCBoolQC
    ALife.Creatur.Genetics.BRGCWord16QC
    ALife.Creatur.Genetics.BRGCWord8QC
    ALife.Creatur.Genetics.DiploidQC
    ALife.Creatur.Genetics.RecombinationQC
    ALife.Creatur.PersistentQC
    ALife.Creatur.UniverseQC
    ALife.Creatur.UtilQC
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
  build-depends:
    , base
    , cereal
    , creatur
    , directory
    , filepath
    , HUnit
    , MonadRandom
    , mtl
    , QuickCheck
    , temporary
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
