cabal-version:      2.4
synopsis:           Framework for artificial life experiments.
name:               creatur
version:            5.9.32
description:
  Please see the README on GitHub at <https://github.com/mhwombat/creatur#readme>

homepage:           https://github.com/mhwombat/creatur
bug-reports:        https://github.com/mhwombat/creatur/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2012-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur

common common-stuff
  default-language: Haskell2010

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    ALife.Creatur
    ALife.Creatur.Checklist
    ALife.Creatur.Clock
    ALife.Creatur.Counter
    ALife.Creatur.Daemon
    ALife.Creatur.Database
    ALife.Creatur.Database.CachedFileSystem
    ALife.Creatur.Database.CachedFileSystemInternal
    ALife.Creatur.Database.FileSystem
    ALife.Creatur.Genetics.Analysis
    ALife.Creatur.Genetics.BRGCBool
    ALife.Creatur.Genetics.BRGCWord16
    ALife.Creatur.Genetics.BRGCWord8
    ALife.Creatur.Genetics.Diploid
    ALife.Creatur.Genetics.Recombination
    ALife.Creatur.Genetics.Reproduction.Sexual
    ALife.Creatur.Genetics.Reproduction.SimplifiedSexual
    ALife.Creatur.Logger
    ALife.Creatur.Logger.SimpleLogger
    ALife.Creatur.Logger.SimpleRotatingLogger
    ALife.Creatur.Namer
    ALife.Creatur.Persistent
    ALife.Creatur.Task
    ALife.Creatur.Universe
    ALife.Creatur.Util

  other-modules:   Paths_creatur
  autogen-modules: Paths_creatur
  ghc-options:     -Wall -Wunused-packages
  build-depends:
    , array                 >= 0.5.4 && < 0.6
    , base                  >= 4.8 && < 5
    , binary                >= 0.8.8 && < 0.11
    , bytestring            >= 0.10.12 && < 0.12
    , cereal                >= 0.5.8 && < 0.6
    , cond                  >= 0.4.1 && < 0.5
    , directory             >= 1.3.6 && < 1.4
    , exceptions            >= 0.10.4 && < 0.11
    , filepath              >= 1.4.2 && < 1.5
    , gray-extended         >= 1.5.10 && < 1.6
    , hdaemonize            >= 0.5.6 && < 0.6
    , hsyslog               >= 5.0.2 && < 5.1
    , MonadRandom           >= 0.5.3 && < 0.6
    , mtl                   >= 2.2.2 && < 2.3
    , random                >= 1.2.0 && < 1.3
    , split                 >= 0.2.3 && < 0.3
    , time                  >= 1.9.3 && < 1.14
    , transformers          >= 0.5.6 && < 0.7
    , unix                  >= 2.7.2 && < 2.8

test-suite creatur-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    ALife.Creatur.ChecklistQC
    ALife.Creatur.CounterQC
    ALife.Creatur.Database.CachedFileSystemQC
    ALife.Creatur.Database.FileSystemQC
    ALife.Creatur.Genetics.BRGCBoolQC
    ALife.Creatur.Genetics.BRGCWord16QC
    ALife.Creatur.Genetics.BRGCWord8QC
    ALife.Creatur.Genetics.DiploidQC
    ALife.Creatur.Genetics.RecombinationQC
    ALife.Creatur.PersistentQC
    ALife.Creatur.UniverseQC
    ALife.Creatur.UtilQC

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages

  build-depends:
    , base
    , cereal
    , creatur
    , directory
    , filepath
    , HUnit
    , MonadRandom
    , mtl
    , QuickCheck
    , temporary
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
